[gd_scene load_steps=19 format=2]

[ext_resource path="res://themes/theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/PlayGamePopup.gd" type="Script" id=2]
[ext_resource path="res://img/gui/popup.png" type="Texture" id=3]
[ext_resource path="res://img/gui/close.png" type="Texture" id=4]
[ext_resource path="res://img/gui/close_highlight.png" type="Texture" id=5]
[ext_resource path="res://fonts/Numans-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://saved_images/2.png" type="Texture" id=7]
[ext_resource path="res://img/gui/small_check.png" type="Texture" id=8]
[ext_resource path="res://img/gui/small_uncheck.png" type="Texture" id=9]
[ext_resource path="res://scripts/GameContainer.gd" type="Script" id=10]
[ext_resource path="res://scenes/VBoxContainerItem.tscn" type="PackedScene" id=11]
[ext_resource path="res://fonts/resources/numans34.tres" type="DynamicFont" id=12]
[ext_resource path="res://img/gui/boton_jugar.png" type="Texture" id=13]
[ext_resource path="res://img/gui/boton_jugar_highlight.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=3]
size = 70
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 42
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 38
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="GDScript" id=2]
script/source = "extends ColorRect

var list_item_scene = preload(\"res://scenes/VBoxContainerItem.tscn\")
onready var selected_item = $ScrollContainer/List/NewGame
var selected_index = -1
var num_items = 0

signal list_updated

func _ready():
	call_deferred(\"fix_scroll\")

func get_selected():
	return self.selected_item

func item_selected(item):
	self.selected_item.unset_selected()
	self.selected_item = item
	item.set_selected()
	emit_signal(\"list_updated\", item)

func setup(saved_games):
	self.selected_index = -1
	self.num_items = saved_games.size()
	var i = 0
	for saved_game in saved_games:
		var list_item = list_item_scene.instance()
		list_item.setup(saved_game)
		if Main.team_mode and saved_game.saved_game_id == Main.saved_game.saved_game_id:
			item_selected(list_item)
			selected_index = i
		list_item.connect(\"item_selected\", self, \"item_selected\")
		$ScrollContainer/List.add_child(list_item)
		i += 1

func fix_scroll():
	if num_items == 0:
		return
	yield(get_tree(), \"idle_frame\")
	var scroll_bar = $ScrollContainer.get_v_scrollbar()
	var percentage = (selected_index + 1.0) / num_items * (scroll_bar.get_max() - scroll_bar.get_page())
	print(\"SET \", percentage)
	scroll_bar.set_value(percentage)
"

[node name="PlayGamePopup" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -510.0
margin_top = -670.0
margin_right = 512.0
margin_bottom = 532.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Content" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -253.0

[node name="NinePatchRect" type="NinePatchRect" parent="Content"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
patch_margin_left = 50
patch_margin_top = 50
patch_margin_right = 50
patch_margin_bottom = 50

[node name="CloseButton" type="TextureButton" parent="Content"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -453.0
margin_top = 54.0
margin_right = -353.0
margin_bottom = 203.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )

[node name="Title" type="Label" parent="Content"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -416.0
margin_top = 334.0
margin_right = 415.0
margin_bottom = 452.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.458824, 0.321569, 0.380392, 1 )
custom_colors/font_color_shadow = Color( 0.458824, 0.321569, 0.380392, 0 )
text = "Título del juego"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="Icon" type="TextureRect" parent="Content"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -125.0
margin_top = 59.0
margin_right = 131.0
margin_bottom = 315.0
texture = ExtResource( 7 )
expand = true

[node name="Description" type="Label" parent="Content"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -394.0
margin_top = 477.0
margin_right = 392.0
margin_bottom = 652.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0 )
text = "Descripción del juego"
align = 1
valign = 1
autowrap = true

[node name="CheckBox" type="CheckBox" parent="Content"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -256.0
margin_top = 685.0
margin_right = 245.0
margin_bottom = 780.0
focus_mode = 0
custom_icons/checked = ExtResource( 8 )
custom_icons/unchecked = ExtResource( 9 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/hseparation = 20
enabled_focus_mode = 0
text = "Partida por equipos"

[node name="SaveGameList" type="ColorRect" parent="Content"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -393.0
margin_top = 810.0
margin_right = 393.0
margin_bottom = 1123.0
script = SubResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="Content/SaveGameList"]
anchor_right = 1.0
anchor_bottom = 1.0
scroll_horizontal_enabled = false
script = ExtResource( 10 )

[node name="List" type="VBoxContainer" parent="Content/SaveGameList/ScrollContainer"]
margin_right = 786.0
margin_bottom = 80.0
rect_min_size = Vector2( 786, 0 )

[node name="NewGame" parent="Content/SaveGameList/ScrollContainer/List" instance=ExtResource( 11 )]
margin_right = 786.0
margin_bottom = 80.0
selected = true

[node name="Turno" type="Label" parent="Content"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -333.0
margin_top = -243.0
margin_right = 334.0
margin_bottom = -110.0
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0.231373, 0.231373, 0.231373, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0 )
text = "Turno para el Equipo 1"
align = 1
valign = 1
autowrap = true

[node name="Button" type="TextureButton" parent="Content"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -306.5
margin_top = -98.0
margin_right = 306.5
margin_bottom = 80.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
[connection signal="pressed" from="Content/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="toggled" from="Content/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="list_updated" from="Content/SaveGameList" to="." method="_on_SaveGameList_list_updated"]
[connection signal="item_selected" from="Content/SaveGameList/ScrollContainer/List/NewGame" to="Content/SaveGameList" method="item_selected"]
[connection signal="pressed" from="Content/Button" to="." method="_on_Button_pressed"]
